Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9433

[Reg] abortEvaluation do nothing on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.2
    • 4.6.0
    • Qt Script
    • None
    • Windows
    • eb407209bb9f2c06684fd1299169cd3b8ab4b58d

    Description

      In my application which I run on Linux and Windows I use QScriptEngine and allows the user to terminate a script using abortEvaluation.
      The script and its engine is running in a thread different from the UI-thread.

      In a slot in the UI a call is made to the thread where the QScriptEngine is located to terminate the script using abortEvaluation. This works fine on Linux but do nothing in Windows, i.e. the script continues.

      Attachments

        1. qtscriptbug.tar
          20 kB
          Erik Ridderby
        2. patch.diff
          0.9 kB
          Nierob
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            nierob Nierob
            paddlaren Erik Ridderby
            Votes:
            5 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes