Fix QScriptEngine::abortEvaluation.

This patch reduce time in which QScriptEngine would abort an script
executing multiple long-running native functions.

Task-number: QTBUG-9433
Reviewed-by: Olivier Goffart
(cherry picked from commit eb407209bb9f2c06684fd1299169cd3b8ab4b58d)