tests/auto/qscriptengine/tst_qscriptengine.cpp
@@ -131,6 +131,7 @@ private slots:
     void numberParsing();
     void automaticSemicolonInsertion();
     void abortEvaluation();
+    void abortEvaluation_QTBUG9433();
     void isEvaluating();
     void printFunctionWithCustomHandler();
     void printThrowsException();
@@ -2977,7 +2978,8 @@ public:
     enum AbortionResult {
         None = 0,
         String = 1,
-        Error = 2
+        Error = 2,
+        Number = 3
     };
 
     EventReceiver3(QScriptEngine *eng) {
@@ -2997,6 +2999,8 @@ public:
             case Error:
                 engine->abortEvaluation(engine->currentContext()->throwError("AbortedWithError"));
                 break;
+            case Number:
+                engine->abortEvaluation(QScriptValue(1234));
             }
         }
         return QObject::event(e);
@@ -3029,7 +3033,7 @@ void tst_QScriptEngine::abortEvaluation()
     EventReceiver3 receiver(&eng);
 
     eng.setProcessEventsInterval(100);
-    for (int x = 0; x < 3; ++x) {
+    for (int x = 0; x < 4; ++x) {
         QCoreApplication::postEvent(&receiver, new QEvent(QEvent::Type(QEvent::User+1)));
         receiver.resultType = EventReceiver3::AbortionResult(x);
         QScriptValue ret = eng.evaluate(QString::fromLatin1("while (1) { }"));
@@ -3037,6 +3041,11 @@ void tst_QScriptEngine::abortEvaluation()
         case EventReceiver3::None:
             QVERIFY(!eng.hasUncaughtException());
             QVERIFY(!ret.isValid());
+            break;
+        case EventReceiver3::Number:
+            QVERIFY(!eng.hasUncaughtException());
+            QVERIFY(ret.isNumber());
+            QCOMPARE(ret.toInt32(), 1234);
             break;
         case EventReceiver3::String:
             QVERIFY(!eng.hasUncaughtException());
@@ -3052,7 +3061,7 @@ void tst_QScriptEngine::abortEvaluation()
     }
 
     // scripts cannot intercept the abortion with try/catch
-    for (int y = 0; y < 3; ++y) {
+    for (int y = 0; y < 4; ++y) {
         QCoreApplication::postEvent(&receiver, new QEvent(QEvent::Type(QEvent::User+1)));
         receiver.resultType = EventReceiver3::AbortionResult(y);
         QScriptValue ret = eng.evaluate(QString::fromLatin1(
@@ -3067,6 +3076,11 @@ void tst_QScriptEngine::abortEvaluation()
         case EventReceiver3::None:
             QVERIFY(!eng.hasUncaughtException());
             QVERIFY(!ret.isValid());
+            break;
+        case EventReceiver3::Number:
+            QVERIFY(!eng.hasUncaughtException());
+            QVERIFY(ret.isNumber());
+            QCOMPARE(ret.toInt32(), 1234);
             break;
         case EventReceiver3::String:
             QVERIFY(!eng.hasUncaughtException());
@@ -3086,6 +3100,46 @@ void tst_QScriptEngine::abortEvaluation()
         QScriptValue ret = eng.evaluate("myFunctionAbortingEvaluation()");
         QVERIFY(!ret.isValid());
     }
+}
+
+class ThreadedEngine : public QThread {
+    Q_OBJECT;
+
+private:
+    QScriptEngine* m_engine;
+protected:
+    void run() {
+        m_engine = new QScriptEngine();
+        m_engine->setGlobalObject(m_engine->newQObject(this));
+        m_engine->evaluate("while(1) { sleep(); }");
+        delete m_engine;
+    }
+
+public slots:
+    void sleep()
+    {
+        QTest::qSleep(25);
+        m_engine->abortEvaluation();
+    }
+};
+
+void tst_QScriptEngine::abortEvaluation_QTBUG9433()
+{
+    ThreadedEngine engine;
+    engine.start();
+    QVERIFY(engine.isRunning());
+    QTest::qSleep(50);
+    for (uint i = 0; i < 50; ++i) { // up to ~2500 ms
+        if (engine.isFinished())
+            return;
+        QTest::qSleep(50);
+    }
+    if (!engine.isFinished()) {
+        engine.terminate();
+        engine.wait(7000);
+        QFAIL("abortEvaluation doesn't work");
+    }
+
 }
 
 static QScriptValue myFunctionReturningIsEvaluating(QScriptContext *, QScriptEngine *eng)
